# athena

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: python.yml
src/athena/: __main__.py
src/athena/core/: application.py  logger.py  service.py
src/athena/gui/: main_window.py
src/athena/gui/components/: sidebar.py
src/athena/gui/pages/: home.py
src/athena/gui/themes/: colors.py  style.py
