[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "athena"
version = "0.1.0"
description = "A voice-first AI assistant for Linux."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Sujan" }
]
license = { text = "MIT" }

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = [
    "tests"
]
